--- a/index.html
+++ b/index.html
@@ -3,7 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Mayne Construction</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <nav class="nav">
+        <img
+          src="./images/Mayne Logo.png"
+          alt="Mayne Construction Logo"
+          class="nav__image"
+        />
+        <ul class="nav__links">
+          <li class="nav__link">Home</li>
+          <li class="nav__link">About Us</li>
+          <li class="nav__link">Projects</li>
+          <li class="nav__link">Services</li>
+          <li class="nav__link nav__link-contact">Contact Us</li>
+        </ul>
+      </nav>
+      <header class="header">
+        <div class="header__card">
+          <img
+            src="./images/Mayne Trucks.png"
+            alt="Mayne Trucks"
+            class="header__image"
+          />
+          <h1 class="header__title">Building things is our mission.</h1>
+          <div class="header__box">
+            <h2 class="header__subtitle">Feature Projects</h2>
+            <p class="header__paragraph">
+              The National University of Architecture
+            </p>
+            <button class="header__button header__button-back">
+              <img
+                src="./images/Arrow.svg"
+                alt="Arrow SVG"
+                class="header__button-arrow"
+              />Back
+            </button>
+            <button class="header__button header__button-next">
+              Next
+              <img
+                src="./images/Arrow.svg"
+                alt="Arrow SVG"
+                class="header__button-arrow header__button-arrow_flip"
+              />
+            </button>
+          </div>
+        </div>
+      </header>
+      <main></main>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
