start reputation section layout

--- a/index.html
+++ b/index.html
@@ -60,7 +60,41 @@
           </div>
         </div>
       </header>
-      <main></main>
+      <main>
+        <section class="reputation">
+          <h2 class="reputation__title">Our Reputation</h2>
+          <div class="reputation__cards">
+            <div class="reputation__card">
+              <img src="" alt="" class="reputation__card-image" />
+              <h3 class="reputation__card-title">Best Services</h3>
+              <p class="reputation__card-paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
+                placeat dolor cum cumque ullam molestias labore voluptatibus
+                blanditiis. Porro voluptas minus ullam.
+              </p>
+              <div class="reputation__card">
+                <img src="" alt="" class="reputation__card-image" />
+                <h3 class="reputation__card-title">Best Teams</h3>
+                <p class="reputation__card-paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
+                  placeat dolor cum cumque ullam molestias labore voluptatibus
+                  blanditiis. Porro voluptas minus ullam.
+                </p>
+                <div class="reputation__card">
+                  <img src="" alt="" class="reputation__card-image" />
+                  <h3 class="reputation__card-title">Best Designs</h3>
+                  <p class="reputation__card-paragraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                    pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
+                    placeat dolor cum cumque ullam molestias labore voluptatibus
+                    blanditiis. Porro voluptas minus ullam.
+                  </p>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
