--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <header class="header">
         <div class="header__card">
           <img
-            src="./images/Mayne Trucks.png"
+            src="./images/Asphalt Roller.png"
             alt="Mayne Trucks"
             class="header__image"
           />
@@ -65,7 +65,11 @@
           <h2 class="reputation__title">Our Reputation</h2>
           <div class="reputation__cards">
             <div class="reputation__card">
-              <img src="" alt="" class="reputation__card-image" />
+              <img
+                src="./images/Headphone.svg"
+                alt=""
+                class="reputation__card-image"
+              />
               <h3 class="reputation__card-title">Best Services</h3>
               <p class="reputation__card-paragraph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
@@ -73,26 +77,39 @@
                 placeat dolor cum cumque ullam molestias labore voluptatibus
                 blanditiis. Porro voluptas minus ullam.
               </p>
-              <div class="reputation__card">
-                <img src="" alt="" class="reputation__card-image" />
-                <h3 class="reputation__card-title">Best Teams</h3>
-                <p class="reputation__card-paragraph">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                  pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
-                  placeat dolor cum cumque ullam molestias labore voluptatibus
-                  blanditiis. Porro voluptas minus ullam.
-                </p>
-                <div class="reputation__card">
-                  <img src="" alt="" class="reputation__card-image" />
-                  <h3 class="reputation__card-title">Best Designs</h3>
-                  <p class="reputation__card-paragraph">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                    pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
-                    placeat dolor cum cumque ullam molestias labore voluptatibus
-                    blanditiis. Porro voluptas minus ullam.
-                  </p>
+            </div>
+            <div class="reputation__card">
+              <img
+                src="./images/Headphone.svg"
+                alt=""
+                class="reputation__card-image"
+              />
+              <h3 class="reputation__card-title">Best Teams</h3>
+              <p class="reputation__card-paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
+                placeat dolor cum cumque ullam molestias labore voluptatibus
+                blanditiis. Porro voluptas minus ullam.
+              </p>
+            </div>
+            <div class="reputation__card">
+              <img
+                src="./images/ruler.svg"
+                alt=""
+                class="reputation__card-image"
+              />
+              <h3 class="reputation__card-title">Best Designs</h3>
+              <p class="reputation__card-paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
+                placeat dolor cum cumque ullam molestias labore voluptatibus
+                blanditiis. Porro voluptas minus ullam.
+              </p>
             </div>
           </div>
+        </section>
+        <section class="about">
+          <img src="./images/Mayne Trucks.png" alt="" class="about__image" />
         </section>
       </main>
       <footer class="footer"></footer>
