Add some styles to the about section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,22 @@
         </section>
         <section class="about">
           <img src="./images/Mayne Trucks.png" alt="" class="about__image" />
+          <div class="about__card">
+            <h2 class="about__title">About us</h2>
+            <p class="about__paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              placeat fugiat sed ea aspernatur accusamus officia, amet, maiores
+              provident ex, natus similique itaque aperiam mollitia quae dicta
+              deleniti voluptatem soluta?
+            </p>
+            <p class="about__paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+              placeat fugiat sed ea aspernatur accusamus officia, amet, maiores
+              provident ex, natus similique itaque aperiam mollitia quae dicta
+              deleniti voluptatem soluta?
+            </p>
+            <button class="about__button">More on Our History</button>
+          </div>
         </section>
       </main>
       <footer class="footer"></footer>
