--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
             <button class="about__button">More on Our History</button>
           </div>
         </section>
+        <section class="services">
+          <h2 class="services__title">Services</h2>
+          <div class="services__cards">
+            <div class="services__card">
+              <img src="" alt="" class="services__image" />
+              <span class="services__line"></span>
+              <h3 class="services__subtitle"></h3>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
