--- a/index.html
+++ b/index.html
@@ -131,9 +131,54 @@
           <h2 class="services__title">Services</h2>
           <div class="services__cards">
             <div class="services__card">
-              <img src="" alt="" class="services__image" />
-              <span class="services__line"></span>
-              <h3 class="services__subtitle"></h3>
+              <img
+                src="./images/Construction.svg"
+                alt=""
+                class="services__image"
+              />
+              <div class="services__line-blue"></div>
+              <h3 class="services__subtitle">Construction</h3>
+            </div>
+            <div class="services__card">
+              <img
+                src="./images/Renovation.svg"
+                alt=""
+                class="services__image"
+              />
+              <div class="services__line-white"></div>
+              <h3 class="services__subtitle">Renovation</h3>
+            </div>
+            <div class="services__card">
+              <img
+                src="./images/Consultation.svg"
+                alt=""
+                class="services__image"
+              />
+              <div class="services__line-blue"></div>
+              <h3 class="services__subtitle">Consultation</h3>
+            </div>
+            <div class="services__card">
+              <img
+                src="./images/Repair Services.svg"
+                alt=""
+                class="services__image"
+              />
+              <div class="services__line-white"></div>
+              <h3 class="services__subtitle">Repair Services</h3>
+            </div>
+            <div class="services__card">
+              <img
+                src="./images/Architecture.svg"
+                alt=""
+                class="services__image"
+              />
+              <div class="services__line-blue"></div>
+              <h3 class="services__subtitle">Architecture</h3>
+            </div>
+            <div class="services__card">
+              <img src="./images/Electric.svg" alt="" class="services__image" />
+              <div class="services__line-white"></div>
+              <h3 class="services__subtitle">Electric</h3>
             </div>
           </div>
         </section>
