Add HTML and some CSS for the quote and footer sections
q

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           />
           <h1 class="header__title">Building things is our mission.</h1>
           <div class="header__box">
-            <h2 class="header__subtitle">Feature Projects</h2>
+            <h2 class="header__subtitle">Featured Projects</h2>
             <p class="header__paragraph">
               The National University of Architecture
             </p>
@@ -182,8 +182,38 @@
             </div>
           </div>
         </section>
+        <section class="quote">
+          <h2 class="quote__title">Request a Quote</h2>
+          <p class="quote__subtitle">
+            We are ready to work on a project of any complexity, fill out the
+            form below for a quote
+          </p>
+          <form action="" class="quote__form"></form>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <h3 class="footer__address">
+          <span class="footer__capital">ADDRESS:</span> 664 Blue Point Rd,
+          Holstville, New York 11742
+        </h3>
+        <h3 class="footer__phone">
+          <span class="footer__capital">PHONE:</span> (631) 999 9999
+        </h3>
+        <h3 class="footer__email">
+          <span class="footer__capital">EMAIL:</span> email@mayneli.com
+        </h3>
+        <img src="./images/Mayne Logo.png" alt="" class="footer__logo" />
+        <h3 class="footer__social">SOCIAL:</h3>
+        <img src="" alt="" class="footer__social-icon" />
+        <img src="" alt="" class="footer__social-icon" />
+        <img src="" alt="" class="footer__social-icon" />
+        <div class="footer__bar">
+          <p class="footer__text">
+            Mayne Construction of Long Island &copy; 2024. All Right Reserved
+          </p>
+        </div>
+        <div class="footer__bottom"></div>
+      </footer>
     </div>
   </body>
 </html>
