Add font-weight to nav section hover elements and fix page size

--- a/index.html
+++ b/index.html
@@ -192,21 +192,23 @@
         </section>
       </main>
       <footer class="footer">
-        <h3 class="footer__address">
-          <span class="footer__capital">ADDRESS:</span> 664 Blue Point Rd,
-          Holstville, New York 11742
-        </h3>
-        <h3 class="footer__phone">
-          <span class="footer__capital">PHONE:</span> (631) 999 9999
-        </h3>
-        <h3 class="footer__email">
-          <span class="footer__capital">EMAIL:</span> email@mayneli.com
-        </h3>
-        <img src="./images/Mayne Logo.png" alt="" class="footer__logo" />
-        <h3 class="footer__social">SOCIAL:</h3>
-        <img src="" alt="" class="footer__social-icon" />
-        <img src="" alt="" class="footer__social-icon" />
-        <img src="" alt="" class="footer__social-icon" />
+        <div class="footer__content">
+          <h3 class="footer__address">
+            <span class="footer__capital">ADDRESS:</span> 664 Blue Point Rd,
+            Holstville, New York 11742
+          </h3>
+          <h3 class="footer__phone">
+            <span class="footer__capital">PHONE:</span> (631) 999 9999
+          </h3>
+          <h3 class="footer__email">
+            <span class="footer__capital">EMAIL:</span> email@mayneli.com
+          </h3>
+          <img src="./images/Mayne Logo.png" alt="" class="footer__logo" />
+          <h3 class="footer__social">SOCIAL:</h3>
+          <img src="" alt="" class="footer__social-icon" />
+          <img src="" alt="" class="footer__social-icon" />
+          <img src="" alt="" class="footer__social-icon" />
+        </div>
         <div class="footer__bar">
           <p class="footer__text">
             Mayne Construction of Long Island &copy; 2024. All Right Reserved
