Add some media queries to lower resolution screen sizes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 alt=""
                 class="services__image"
               />
-              <div class="services__line-blue"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Construction</h3>
             </div>
             <div class="services__card">
@@ -145,7 +145,7 @@
                 alt=""
                 class="services__image"
               />
-              <div class="services__line-white"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Renovation</h3>
             </div>
             <div class="services__card">
@@ -154,7 +154,7 @@
                 alt=""
                 class="services__image"
               />
-              <div class="services__line-blue"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Consultation</h3>
             </div>
             <div class="services__card">
@@ -163,7 +163,7 @@
                 alt=""
                 class="services__image"
               />
-              <div class="services__line-white"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Repair Services</h3>
             </div>
             <div class="services__card">
@@ -172,12 +172,12 @@
                 alt=""
                 class="services__image"
               />
-              <div class="services__line-blue"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Architecture</h3>
             </div>
             <div class="services__card">
               <img src="./images/Electric.svg" alt="" class="services__image" />
-              <div class="services__line-white"></div>
+              <div class="services__line"></div>
               <h3 class="services__subtitle">Electric</h3>
             </div>
           </div>
