Add structure to form in quote section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 class="services__image"
               />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Construction</h3>
+              <h3 class="services__subtitle">Demolition</h3>
             </div>
             <div class="services__card">
               <img
@@ -146,7 +146,7 @@
                 class="services__image"
               />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Renovation</h3>
+              <h3 class="services__subtitle">Carpentry</h3>
             </div>
             <div class="services__card">
               <img
@@ -155,7 +155,7 @@
                 class="services__image"
               />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Consultation</h3>
+              <h3 class="services__subtitle">Masonry</h3>
             </div>
             <div class="services__card">
               <img
@@ -164,7 +164,7 @@
                 class="services__image"
               />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Repair Services</h3>
+              <h3 class="services__subtitle">Concrete</h3>
             </div>
             <div class="services__card">
               <img
@@ -173,12 +173,12 @@
                 class="services__image"
               />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Architecture</h3>
+              <h3 class="services__subtitle">Asphalt</h3>
             </div>
             <div class="services__card">
               <img src="./images/Electric.svg" alt="" class="services__image" />
               <div class="services__line"></div>
-              <h3 class="services__subtitle">Electric</h3>
+              <h3 class="services__subtitle">Finishes</h3>
             </div>
           </div>
         </section>
@@ -188,7 +188,39 @@
             We are ready to work on a project of any complexity, fill out the
             form below for a quote
           </p>
-          <form action="" class="quote__form"></form>
+          <form action="" class="quote__form">
+            <fieldset class="quote__fieldset">
+              <label for="" class="quote__label"
+                >Full Name
+                <input type="text" class="quote__input" />
+              </label>
+              <label for="" class="quote__label"
+                >Email
+                <input required type="email" class="quote__input" />
+              </label>
+              <!--<label for="" class="quote__label"
+                ><select multiple name="" id="" class="quote__select">
+                  <option value="demolition">Demolition</option>
+                  <option value="carpentry">Carpentry</option>
+                  <option value="masonry">Masonry</option>
+                  <option value="concrete">Concrete</option>
+                  <option value="asphalt">Asphalt</option>
+                  <option value="other">Other</option>
+                </select></label
+              >-->
+              <label for="" class="quote__label">
+                <textarea
+                  name=""
+                  id=""
+                  cols="30"
+                  rows="10"
+                  class="quote__textarea"
+                ></textarea>
+              </label>
+            </fieldset>
+            <button class="quote__button">Send Message</button>
+            projectType(can select multiple) message button
+          </form>
         </section>
       </main>
       <footer class="footer">
