--- a/index.html
+++ b/index.html
@@ -183,53 +183,71 @@
           </div>
         </section>
         <section class="contact">
-          <h2 class="contact__title">What can we do for you?</h2>
+          <h2 class="contact__title">Contact Us</h2>
           <p class="contact__subtitle">
-            We are ready to work on a project of any complexity, fill out the
-            form below for a quote
+            Please fill out the form below to get in contact with us
           </p>
           <form action="" class="contact__form">
             <fieldset class="contact__fieldset">
-              <label for="" class="contact__label"></label>
-                <input
-                  placeholder="Your Name"
-                  type="text"
-                  class="contact__input"
-                />
-              </label>
-              <label for="" class="contact__label"
-                >
-                <input placeholder="Email" required type="email" class="contact__input" />
-              </label>
-              <label for="" class="contact__label"
-                ><select
-                  placeholder="Reason for Contacting"
-                  name=""
-                  id=""
-                  class="contact__select"
-                >
-                  <option value="demolition">Demolition</option>
-                  <option value="carpentry">Carpentry</option>
-                  <option value="masonry">Masonry</option>
-                  <option value="concrete">Concrete</option>
-                  <option value="asphalt">Asphalt</option>
-                  <option value="other">Other</option>
-                </select></label
+              <label for="" class="contact__label">Name</label>
+              <input
+                placeholder="Your full name"
+                type="text"
+                class="contact__input"
+              />
+
+              <label for="" class="contact__label">Phone</label>
+              <input
+                placeholder="Your phone number"
+                required
+                type="number"
+                class="contact__input"
+              />
+
+              <label for="" class="contact__label">Email</label>
+              <input
+                placeholder="Your email address"
+                required
+                type="email"
+                class="contact__input"
+              />
+
+              <label for="" class="contact__label">Type of work</label
+              ><select
+                placeholder="Reason for Contacting"
+                name=""
+                id=""
+                class="contact__select"
               >
-              <label for="" class="contact__label">
-                <textarea
-                  name=""
-                  id=""
-                  cols="30"
-                  rows="10"
-                  class="contact__textarea"
-                ></textarea>
-              </label>
+                <option value="demolition">Demolition</option>
+                <option value="carpentry">Carpentry</option>
+                <option value="masonry">Masonry</option>
+                <option value="concrete">Concrete</option>
+                <option value="asphalt">Asphalt</option>
+                <option value="other">Other</option>
+              </select>
+              <label for="" class="contact__label">Message</label>
+              <textarea
+                placeholder="Enter message here"
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+                class="contact__textarea"
+              ></textarea>
+              <button class="contact__button">Send Message</button>
             </fieldset>
-            <button class="contact__button">Send Message</button>
-            projectType(can select multiple) message button
           </form>
-          <iframe class="contact__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            class="contact__map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </section>
       </main>
       <footer class="footer">
@@ -255,7 +273,6 @@
             Mayne Construction of Long Island &copy; 2024. All Right Reserved
           </p>
         </div>
-        <div class="footer__bottom"></div>
       </footer>
     </div>
   </body>
