Add different html files for each section

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
           alt="Mayne Construction Logo"
           class="nav__image"
         />
-        <ul class="nav__links">
-          <li class="nav__link">Home</li>
-          <li class="nav__link">About Us</li>
-          <li class="nav__link">Project Gallery</li>
-          <li class="nav__link">Services</li>
-          <li class="nav__link nav__link-contact">Contact Us</li>
-        </ul>
+        <div class="nav__links">
+          <a class="nav__link" href="./index.html">Home</a>
+          <a class="nav__link" href="./about.html">About Us</a>
+          <a class="nav__link" href="./gallery.html">Project Gallery</a>
+          <a class="nav__link" href="./services.html">Services</a></li>
+          <a class="nav__link nav__link-contact" href="./contact.html">Contact Us</a>
+        </div>
       </nav>
       <header class="header">
         <div class="header__card">
@@ -110,25 +110,7 @@
             </div>
           </div>
         </section>
-        <section class="about">
-          <img src="./images/Mayne Trucks.png" alt="" class="about__image" />
-          <div class="about__card">
-            <h2 class="about__title">About us</h2>
-            <p class="about__paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-              placeat fugiat sed ea aspernatur accusamus officia, amet, maiores
-              provident ex, natus similique itaque aperiam mollitia quae dicta
-              deleniti voluptatem soluta?
-            </p>
-            <p class="about__paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
-              placeat fugiat sed ea aspernatur accusamus officia, amet, maiores
-              provident ex, natus similique itaque aperiam mollitia quae dicta
-              deleniti voluptatem soluta?
-            </p>
-            <button class="about__button">More on Our History</button>
-          </div>
-        </section>
+
         <section class="services">
           <h2 class="services__title">Services</h2>
           <div class="services__cards">
