Work on new front page in services pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav__link" href="./about.html">About Us</a>
           <a class="nav__link" href="./gallery.html">Project Gallery</a>
           <a class="nav__link" href="./services.html">Services</a></li>
-          <a class="nav__link nav__link-contact" href="./contact.html">Contact Us</a>
+          <a class="nav__link nav__link-quote" href="">Request A Quote</a>
         </div>
       </nav>
       <header class="header">
@@ -63,110 +63,18 @@
         </div>
       </header>
       <main>
-        <section class="reputation">
-          <h2 class="reputation__title">Our Reputation</h2>
-          <div class="reputation__cards">
-            <div class="reputation__card">
-              <img
-                src="./images/Headphone.svg"
-                alt=""
-                class="reputation__card-image"
-              />
-              <h3 class="reputation__card-title">Best Services</h3>
-              <p class="reputation__card-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
-                placeat dolor cum cumque ullam molestias labore voluptatibus
-                blanditiis. Porro voluptas minus ullam.
-              </p>
-            </div>
-            <div class="reputation__card">
-              <img
-                src="./images/Headphone.svg"
-                alt=""
-                class="reputation__card-image"
-              />
-              <h3 class="reputation__card-title">Best Teams</h3>
-              <p class="reputation__card-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
-                placeat dolor cum cumque ullam molestias labore voluptatibus
-                blanditiis. Porro voluptas minus ullam.
-              </p>
-            </div>
-            <div class="reputation__card">
-              <img
-                src="./images/ruler.svg"
-                alt=""
-                class="reputation__card-image"
-              />
-              <h3 class="reputation__card-title">Best Designs</h3>
-              <p class="reputation__card-paragraph">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                pariatur obcaecati adipisci quos iure, distinctio eaque tenetur
-                placeat dolor cum cumque ullam molestias labore voluptatibus
-                blanditiis. Porro voluptas minus ullam.
-              </p>
-            </div>
-          </div>
-        </section>
 
-        <section class="services">
-          <h2 class="services__title">Services</h2>
-          <div class="services__cards">
-            <div class="services__card">
-              <img
-                src="./images/Construction.svg"
-                alt=""
-                class="services__image"
-              />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Demolition</h3>
-            </div>
-            <div class="services__card">
-              <img
-                src="./images/Renovation.svg"
-                alt=""
-                class="services__image"
-              />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Carpentry</h3>
-            </div>
-            <div class="services__card">
-              <img
-                src="./images/Consultation.svg"
-                alt=""
-                class="services__image"
-              />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Masonry</h3>
-            </div>
-            <div class="services__card">
-              <img
-                src="./images/Repair Services.svg"
-                alt=""
-                class="services__image"
-              />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Concrete</h3>
-            </div>
-            <div class="services__card">
-              <img
-                src="./images/Architecture.svg"
-                alt=""
-                class="services__image"
-              />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Asphalt</h3>
-            </div>
-            <div class="services__card">
-              <img src="./images/Electric.svg" alt="" class="services__image" />
-              <div class="services__line"></div>
-              <h3 class="services__subtitle">Finishes</h3>
-            </div>
-          </div>
-        </section>
         <section class="contact">
+          <iframe
+            class="contact__map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
           <h2 class="contact__title">Contact Us</h2>
           <p class="contact__subtitle">
             Please fill out the form below to get in contact with us
@@ -217,16 +125,6 @@
               <button class="contact__button">Send Message</button>
             </fieldset>
           </form>
-          <iframe
-            class="contact__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
         </section>
       </main>
       <footer class="footer">
