Change logo on header in services section

--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
   <body>
     <div class="page">
       <nav class="headerr">
-        <img src="./images/Mayne Logo - Copy-modified.png" alt="" class="headerr__logo">
+        <img src="./images/image (3).png" alt="" class="headerr__logo">
         <div class="headerr__overlay"></div>
         <div class="headerr__links">
           <a class="headerr__link" href="./index.html">Home</a>
