--- a/index.html
+++ b/index.html
@@ -15,70 +15,30 @@
   </head>
   <body>
     <div class="page">
-      <nav class="nav">
-        <img
-          src="./images/Mayne Logo.png"
-          alt="Mayne Construction Logo"
-          class="nav__image"
-        />
-        <div class="nav__links">
-          <a class="nav__link" href="./index.html">Home</a>
-          <a class="nav__link" href="./about.html">About Us</a>
-          <a class="nav__link" href="./gallery.html">Project Gallery</a>
-          <a class="nav__link" href="./services.html">Services</a></li>
-          <a class="nav__link nav__link-quote" href="">Request A Quote</a>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                 Header                                  -->
+      <!-- ----------------------------------------------------------------------- -->
+      <nav class="header">
+        <img src="./images/image (3).png" alt="" class="header__logo">
+        <div class="header__overlay"></div>
+        <div class="header__links">
+          <a class="header__link" href="./index.html">Home</a>
+          <a class="header__link" href="./about.html">About Us</a>
+          <a class="header__link" href="./gallery.html">Project Gallery</a>
+          <a class="header__link" href="./services.html">Services</a></li>
+          <button class="header__button">Request A Quote</button>
         </div>
       </nav>
-      <header class="header">
-        <div class="header__card">
-          <div class="header__image-parent">
-            <img
-              src="./images/Asphalt Roller.png"
-              alt="Mayne Trucks"
-              class="header__image"
-            />
-          </div>
-          <h1 class="header__title">Building things is our mission.</h1>
-          <div class="header__box">
-            <h2 class="header__subtitle">Featured Projects</h2>
-            <p class="header__paragraph">
-              The National University of Architecture
-            </p>
-            <button class="header__button header__button-back">
-              <img
-                src="./images/Arrow.svg"
-                alt="Arrow SVG"
-                class="header__button-arrow"
-              />Back
-            </button>
-            <button class="header__button header__button-next">
-              Next
-              <img
-                src="./images/Arrow.svg"
-                alt="Arrow SVG"
-                class="header__button-arrow header__button-arrow_flip"
-              />
-            </button>
-          </div>
-        </div>
-      </header>
       <main>
-
-        <section class="contact">
-          <iframe
-            class="contact__map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-          <h2 class="contact__title">Contact Us</h2>
+        <!-- ----------------------------------------------------------------------- -->
+        <!--                                 Contact                                 -->
+        <!-- ----------------------------------------------------------------------- -->
+        <section class="contact page__section">
+      <h2 class="contact__title">Contact Us</h2>
           <p class="contact__subtitle">
             Please fill out the form below to get in contact with us
           </p>
+          <div class="contact__display">
           <form action="" class="contact__form">
             <fieldset class="contact__fieldset">
               <input
@@ -86,14 +46,12 @@
                 type="text"
                 class="contact__input"
               />
-
               <input
                 placeholder="Your phone number"
                 required
                 type="tel"
                 class="contact__input"
               />
-
               <input
                 placeholder="Your email address"
                 required
@@ -101,7 +59,7 @@
                 class="contact__input"
               />
               <select
-                placeholder="Reason for Contacting"
+                placeholder="Reason for contacting"
                 name=""
                 id=""
                 class="contact__select"
@@ -125,32 +83,53 @@
               <button class="contact__button">Send Message</button>
             </fieldset>
           </form>
+          <iframe
+        class="contact__map"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.819795951687!2d-73.03915172255746!3d40.809953571379225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e848813deb59b5%3A0x43753e096dd595a8!2s664%20Blue%20Point%20Rd%2C%20Holtsville%2C%20NY%2011742!5e0!3m2!1sen!2sus!4v1712371480364!5m2!1sen!2sus"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
         </section>
       </main>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                 Footer                                  -->
+      <!-- ----------------------------------------------------------------------- -->
       <footer class="footer">
-        <div class="footer__content">
-          <h3 class="footer__address">
-            <span class="footer__capital">ADDRESS:</span> 664 Blue Point Rd,
-            Holstville, New York 11742
-          </h3>
-          <h3 class="footer__phone">
-            <span class="footer__capital">PHONE:</span> (631) 999 9999
-          </h3>
-          <h3 class="footer__email">
-            <span class="footer__capital">EMAIL:</span> email@mayneli.com
-          </h3>
-          <img src="./images/Mayne Logo.png" alt="" class="footer__logo" />
-          <h3 class="footer__social">SOCIAL:</h3>
-          <img src="" alt="" class="footer__social-icon" />
-          <img src="" alt="" class="footer__social-icon" />
-          <img src="" alt="" class="footer__social-icon" />
+        <div class="footer__left">
+          <div class="footer__icons">
+            <a href="" class="footer__anchor">
+              <image class="footer__icon"></image>
+            </a>
+            <a href="" class="footer__anchor">
+              <image class="footer__icon"></image>
+            </a>
+              <a href="" class="footer__anchor">
+                <image class="footer__icon"></image>
+              </a>
+          </div>
+          <h2 class="footer__name">Mayne Construction</h2>
+          <h3 class="footer__address">664 Blue Point Road, Holstville, NY 11742</h3>
+          <h4 class="footer__info">631-222-2222</h4>
+          <h4 class="footer__info">adminstration@mayneli.com</h4>
         </div>
-        <div class="footer__bar">
-          <p class="footer__text">
-            Mayne Construction of Long Island &copy; 2024. All Right Reserved
-          </p>
+        <div class="footer__right">
+          
         </div>
+        <!-- social media icons
+        Mayne Construction
+        phone
+        email
+
+        logo
+        copyright Mayne Construction
+        all rights reserved -->
       </footer>
     </div>
   </body>
 </html>
+
