Fix option section on contact us form

--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
                 id=""
                 class="contact__select"
               >
-                <option disabled selected value="">Project type</option>
-                <option value="demolition">Demolition</option>
-                <option value="carpentry">Carpentry</option>
-                <option value="masonry">Masonry</option>
-                <option value="concrete">Concrete</option>
-                <option value="asphalt">Asphalt</option>
+                <option disabled selected value="">Reason for Contacting</option>
+                <option value="demolition">Quote</option>
+                <option value="carpentry">Existing Project</option>
+                <option value="concrete">Collaboration</option>
                 <option value="other">Other</option>
               </select>
               <textarea
@@ -118,7 +116,7 @@
           <h4 class="footer__info">adminstration@mayneli.com</h4>
         </div>
         <div class="footer__right">
-          
+
         </div>
         <!-- social media icons
         Mayne Construction
