--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--                                 Header                                  -->
       <!-- ----------------------------------------------------------------------- -->
       <nav class="header">
-        <img src="./images/image (3).png" alt="" class="header__logo">
+        <img src="./images/white-logo.png" alt="" class="header__logo">
         <div class="header__overlay"></div>
         <div class="header__links">
           <a class="header__link" href="./index.html">Home</a>
